@@ -1,1 +1,10 @@
 # PearlHack2022
+This is my hackathon submission for PearlHack2022. I was inspired by going the aquarium and looking all the fishes. Whales are one of my favorite animals, so I choose to focus on them. They are some of the whales that can be found in the Arctic Ocean.
+
+### Set Up
+- follow these instructions to get javaFx set up 
+  - https://openjfx.io/openjfx-docs/
+
+### How to Use
+- In the terminal, navigate into the folder where you downloaded the files
+- run java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml,javafx.media AntarcticAnimals
